--- a/MishkatZahra_2501629 5.5/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MishkatZahra_2501629 5.5/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -165,6 +165,7 @@ ContentBrowserDrawer.ThumbnailSize=2
 ContentBrowserDrawer.CurrentViewType=1
 ContentBrowserDrawer.ZoomScale=0
 ContentBrowserDrawer.JumpMRU=/All/Game
+ContentBrowserDrawer.JumpMRU=/All/Game/textures
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.IsLocked=False
@@ -210,12 +211,26 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [PlacementMode]
-RecentlyPlaced=/Game/rockwall.rockwall;
+RecentlyPlaced=/Game/rock_moss_set_02_rock08.rock_moss_set_02_rock08;
+RecentlyPlaced=/Game/rock_moss_set_02_rock11.rock_moss_set_02_rock11;
+RecentlyPlaced=/Game/rock_moss_set_02_rock07.rock_moss_set_02_rock07;
+RecentlyPlaced=/Game/rock_moss_set_02_rock09.rock_moss_set_02_rock09;
+RecentlyPlaced=/Game/rock_moss_set_02_rock13.rock_moss_set_02_rock13;
+RecentlyPlaced=/Game/flower_heliophila_medium_LOD0.flower_heliophila_medium_LOD0;
+RecentlyPlaced=/Game/rock_moss_set_02_rock10.rock_moss_set_02_rock10;
+RecentlyPlaced=/Game/flower_ursinia_c_LOD0.flower_ursinia_c_LOD0;
+RecentlyPlaced=/Game/flower_ursinia_a_LOD0.flower_ursinia_a_LOD0;
+RecentlyPlaced=/Game/flower_ursinia_d_LOD0.flower_ursinia_d_LOD0;
+RecentlyPlaced=/Game/street_rat_1k.street_rat_1k;
 RecentlyPlaced=/Game/moss.moss;
+RecentlyPlaced=/Game/rock_moss_set_02_rock12.rock_moss_set_02_rock12;
+RecentlyPlaced=/Game/rock_moss_set_02_nor_gl_1k.rock_moss_set_02_nor_gl_1k;
+RecentlyPlaced=/Game/rock_moss_set_02_diff_1k.rock_moss_set_02_diff_1k;
+RecentlyPlaced=/Game/rock_moss_set_02.rock_moss_set_02;
+RecentlyPlaced=/Game/rockwall.rockwall;
 RecentlyPlaced=/Game/rock.rock;
 RecentlyPlaced=/Game/Grass.Grass;
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
-RecentlyPlaced=/Script/Engine.DirectionalLight;/Engine/Transient.ActorFactoryDirectionalLight_0
 
 [DetailCategories]
 DirectionalLight.TransformCommon=True
@@ -298,6 +313,24 @@ MaterialExpressionTextureSample.MaterialExpressionTextureBase=True
 MaterialExpressionTextureSample.MaterialExpression=True
 MaterialExpressionTextureCoordinate.MaterialExpressionTextureCoordinate=True
 MaterialExpressionTextureCoordinate.MaterialExpression=True
+PlayerStart.TransformCommon=True
+PlayerStart.Object=True
+PlayerStart.Rendering=True
+PlayerStart.Replication=True
+PlayerStart.HLOD=True
+PlayerStart.Physics=True
+PlayerStart.Networking=True
+PlayerStart.Input=True
+PlayerStart.Actor=True
+BP_Pickup_Rifle_C.TransformCommon=True
+BP_Pickup_Rifle_C.Rendering=True
+BP_Pickup_Rifle_C.Replication=True
+BP_Pickup_Rifle_C.Collision=True
+BP_Pickup_Rifle_C.HLOD=True
+BP_Pickup_Rifle_C.Physics=True
+BP_Pickup_Rifle_C.Networking=True
+BP_Pickup_Rifle_C.Input=True
+BP_Pickup_Rifle_C.Actor=True
 
 [Interchange_StackName__Assets__PipelineClassName_InterchangeGenericAssetsPipeline]
 PipelineDisplayName=Default Assets Pipeline
@@ -416,9 +449,9 @@ ImportContentDialogSizeX=1000
 ImportContentDialogSizeY=650
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/moss
-MRUItem1=/Game/rock
-MRUItem2=/Game/rockwall
+MRUItem0=/Game/rockwall
+MRUItem1=/Game/moss
+MRUItem2=/Game/rock
 
 [DetailPropertyExpansion]
 StaticMeshActor="\"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" "
