--- a/MishkatZahra_2501629 5.5/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MishkatZahra_2501629 5.5/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -165,6 +165,7 @@ ContentBrowserDrawer.ThumbnailSize=2
 ContentBrowserDrawer.CurrentViewType=1
 ContentBrowserDrawer.ZoomScale=0
 ContentBrowserDrawer.JumpMRU=/All/Game
+ContentBrowserDrawer.JumpMRU=/All
 ContentBrowserDrawer.JumpMRU=/All/Game/textures
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.SourcesExpanded=True
