--- a/MishkatZahra_2501629 5.5/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MishkatZahra_2501629 5.5/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -195,6 +195,7 @@ LastLevel=/Game/FirstPerson/Maps/FirstPersonMap
 CleanShutdown=False
 DebuggerAttached=False
 RecentAssetEditors=MaterialEditor
+RecentAssetEditors=TextureEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialEditor
 
@@ -212,26 +213,26 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [PlacementMode]
+RecentlyPlaced=/Game/flower_heliophila_small_LOD2.flower_heliophila_small_LOD2;
+RecentlyPlaced=/Game/rock_moss_set_02_rock10.rock_moss_set_02_rock10;
+RecentlyPlaced=/Game/flower_ursinia_d_LOD0.flower_ursinia_d_LOD0;
+RecentlyPlaced=/Game/flower_heliophila_medium_LOD0.flower_heliophila_medium_LOD0;
+RecentlyPlaced=/Game/flower_ursinia_c_LOD0.flower_ursinia_c_LOD0;
+RecentlyPlaced=/Game/flower_heliophila_large_LOD3.flower_heliophila_large_LOD3;
+RecentlyPlaced=/Game/flower_heliophila_large_LOD0.flower_heliophila_large_LOD0;
+RecentlyPlaced=/Game/flower_ursinia_a_LOD0.flower_ursinia_a_LOD0;
+RecentlyPlaced=/Game/flower_ursinia_e_LOD0.flower_ursinia_e_LOD0;
+RecentlyPlaced=/Game/flower_heliophila_medium_LOD2.flower_heliophila_medium_LOD2;
+RecentlyPlaced=/Game/tree_small_02_1k.tree_small_02_1k;
 RecentlyPlaced=/Game/rock_moss_set_02_rock08.rock_moss_set_02_rock08;
 RecentlyPlaced=/Game/rock_moss_set_02_rock11.rock_moss_set_02_rock11;
 RecentlyPlaced=/Game/rock_moss_set_02_rock07.rock_moss_set_02_rock07;
 RecentlyPlaced=/Game/rock_moss_set_02_rock09.rock_moss_set_02_rock09;
 RecentlyPlaced=/Game/rock_moss_set_02_rock13.rock_moss_set_02_rock13;
-RecentlyPlaced=/Game/flower_heliophila_medium_LOD0.flower_heliophila_medium_LOD0;
-RecentlyPlaced=/Game/rock_moss_set_02_rock10.rock_moss_set_02_rock10;
-RecentlyPlaced=/Game/flower_ursinia_c_LOD0.flower_ursinia_c_LOD0;
-RecentlyPlaced=/Game/flower_ursinia_a_LOD0.flower_ursinia_a_LOD0;
-RecentlyPlaced=/Game/flower_ursinia_d_LOD0.flower_ursinia_d_LOD0;
 RecentlyPlaced=/Game/street_rat_1k.street_rat_1k;
 RecentlyPlaced=/Game/moss.moss;
 RecentlyPlaced=/Game/rock_moss_set_02_rock12.rock_moss_set_02_rock12;
 RecentlyPlaced=/Game/rock_moss_set_02_nor_gl_1k.rock_moss_set_02_nor_gl_1k;
-RecentlyPlaced=/Game/rock_moss_set_02_diff_1k.rock_moss_set_02_diff_1k;
-RecentlyPlaced=/Game/rock_moss_set_02.rock_moss_set_02;
-RecentlyPlaced=/Game/rockwall.rockwall;
-RecentlyPlaced=/Game/rock.rock;
-RecentlyPlaced=/Game/Grass.Grass;
-RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 
 [DetailCategories]
 DirectionalLight.TransformCommon=True
@@ -332,6 +333,28 @@ BP_Pickup_Rifle_C.Physics=True
 BP_Pickup_Rifle_C.Networking=True
 BP_Pickup_Rifle_C.Input=True
 BP_Pickup_Rifle_C.Actor=True
+SkyAtmosphere.TransformCommon=True
+SkyAtmosphere.Planet=True
+SkyAtmosphere.Atmosphere=True
+SkyAtmosphere.Atmosphere - Rayleigh=True
+SkyAtmosphere.Atmosphere - Mie=True
+SkyAtmosphere.Atmosphere - Absorption=True
+SkyAtmosphere.Art Direction=True
+SkyAtmosphere.Rendering=True
+SkyAtmosphere.Physics=True
+SkyAtmosphere.Tags=True
+SkyAtmosphere.Activation=True
+SkyAtmosphere.Cooking=True
+SkyAtmosphere.Replication=True
+SkyAtmosphere.Networking=True
+SkyAtmosphere.Actor=True
+Texture2D.LevelOfDetail=True
+Texture2D.Compression=True
+Texture2D.Interchange =True
+Texture2D.Texture=True
+Texture2D.Adjustments=True
+Texture2D.File Path=True
+Texture2D.Compositing=True
 
 [Interchange_StackName__Assets__PipelineClassName_InterchangeGenericAssetsPipeline]
 PipelineDisplayName=Default Assets Pipeline
@@ -450,9 +473,10 @@ ImportContentDialogSizeX=1000
 ImportContentDialogSizeY=650
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/rockwall
-MRUItem1=/Game/moss
-MRUItem2=/Game/rock
+MRUItem0=/Game/moss
+MRUItem1=/Game/mossy_brick_diff_1k
+MRUItem2=/Game/rockwall
+MRUItem3=/Game/rock
 
 [DetailPropertyExpansion]
 StaticMeshActor="\"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" "
